# DefianceNetwork

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  example-content.augy  example-streaming-usage.rs  peer-registry-example.json
.github/workflows/: ci.yml
defiance-audigy/: Cargo.toml
defiance-audigy/src/: augy.rs  discovery.rs  lib.rs  player.rs  streaming.rs
defiance-bridge/: Cargo.toml
defiance-bridge/src/: bridge_core.rs  lib.rs  paradigm.rs  paradigm_api.rs  payment.rs  payment_gateway.rs  staking.rs
defiance-bridge/src/arceon/: bridge.rs  mod.rs  rpc_client.rs  types.rs  wallet.rs
defiance-cast/: Cargo.toml
defiance-cast/src/: airplay.rs  chromecast.rs  dlna.rs  lib.rs
defiance-cli/: Cargo.toml
defiance-cli/src/: main.rs
defiance-core/: Cargo.toml
defiance-core/src/: broadcast.rs  content.rs  crypto.rs  error.rs  lib.rs  monitoring.rs  network.rs  storage.rs  streaming.rs  user.rs  video.rs
defiance-discovery/: Cargo.toml
defiance-discovery/src/: lib.rs
defiance-ml/: Cargo.toml
defiance-ml/src/: adaptive_streaming.rs  anomaly_detector.rs  bandwidth_estimator.rs  latency_predictor.rs  lib.rs  network_predictor.rs  peer_selector.rs  quality_optimizer.rs
defiance-mobile/: Cargo.toml
defiance-mobile/src/: lib.rs
defiance-ui/: Cargo.toml
defiance-ui/src/: animation.rs  components.rs  config.rs  layout.rs  lib.rs  main.rs  theme.rs
defiance-web/: Cargo.toml
defiance-web/src/: lib.rs
docs/: ARCHITECTURE.md  QUICKSTART.md
integration-tests/: Cargo.toml
integration-tests/tests/: basic_integration.rs  simple_tests.rs
tests/: basic_integration.rs  integration_tests.rs
