[package]
name = "defiance-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
defiance-core = { path = "../defiance-core" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
libp2p = { workspace = true }
blake3 = { workspace = true }