[package]
name = "defiance-discovery"
version = "0.1.0"
edition = "2021"
description = "Peer discovery and network bootstrapping for DefianceNetwork"
license = "MIT"

[dependencies]
# Core dependencies from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libp2p = { workspace = true }
reqwest = { workspace = true }
mdns = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }