[package]
name = "defiance-ml"
version = "0.1.0"
edition = "2021"
description = "ML optimization and network intelligence for DefianceNetwork"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Math and statistics
nalgebra = "0.33"
statrs = "0.17"

# Lightweight ML without heavy dependencies
smartcore = { version = "0.3", default-features = false, optional = true }

# Time series analysis
tch = { version = "0.16", optional = true }

# Local workspace dependencies
defiance-core = { path = "../defiance-core" }

[features]
default = ["basic-ml"]
basic-ml = ["smartcore"]
advanced-ml = ["tch"]