[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for DefianceNetwork"

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# DefianceNetwork modules
defiance-core = { path = "../defiance-core" }
defiance-audigy = { path = "../defiance-audigy" }
defiance-cast = { path = "../defiance-cast" }
defiance-bridge = { path = "../defiance-bridge" }
defiance-discovery = { path = "../defiance-discovery" }

[[test]]
name = "simple_tests" 
path = "tests/simple_tests.rs"